--- a/ReenbitTest.UI/Components/ProfileComponent.razor
+++ b/ReenbitTest.UI/Components/ProfileComponent.razor
@@ -13,7 +13,7 @@
     }
     else
     {
-        <MudPaper Elevation="0" Class="pa-2 pa-sm-4">
+        <MudPaper Elevation="0" Class="pa-2 pa-sm-4" Style="background-color: var(--mud-palette-background);">
             <div class="profile-avatar-section d-flex justify-center text-center">
                 <MudAvatar Color="Color.Primary" Size="Size.Large" Style="width: 100px; height: 100px; font-size: 2rem;" Class="mb-2">
                     @_userInitials
