--- a/ReenbitTest.UI/Pages/Home.razor
+++ b/ReenbitTest.UI/Pages/Home.razor
@@ -200,7 +200,7 @@
     }
     
     .mud-paper.mud-theme-tertiary {
-        background-color: var(--mud-palette-tertiary) !important;
+        background-color: white !important;
         border: 1px solid var(--mud-palette-lines-default);
     }
     
